--- a/action.yml
+++ b/action.yml
@@ -26,15 +26,15 @@ inputs:
 
   commit-template:
     description: 'Template for commit message using $version$ as var'
-    default: 'chore(release): 🔖 $version$ [skip ci]'
+    default: 'chore(release): 🔖 _version_ [skip ci]'
 
-  githubToken:
-    description: 'GITHUB_TOKEN allowing to push on repo'
+  github-token:
+    description: 'GITHUB_TOKEN allowing to push on repo & access package'
 
 outputs:
   new-version:
     description: Nouvelle version selectionnée par semantic
-    value: ${{ steps.packaging.outputs.NEW_VERSION }}
+    value: ${{ steps.extract-version.outputs.value }}
 
 runs:
   using: 'composite'
@@ -45,29 +45,49 @@ runs:
   - name: Load Node.js
     uses: actions/setup-node@v3
     with:
-      node-version: '19.7.0'
+      node-version: 19
       cache: 'yarn'
       cache-dependency-path: yarn.lock
 
-  - name: Installing dependencies
-    run: yarn install #--frozen-lockfile
+  - name: Run packaging using npx
+    id: packaging
+    run: |
+      touch .nprmc
+      echo "@kezios:registry=https://npm.pkg.github.com/" >> .npmrc
+      echo "//npm.pkg.github.com/:_authToken=${{ inputs.github-token }}" >> .npmrc
+      npx @kezios/github-action-packaging@latest node --package-uri=${{ inputs.package-path }} --changelog-uri=${{ inputs.changelog-path }} --branch=${{ inputs.branch }}
+      rm .npmrc
     shell: bash
 
-  - name: Installing dependencies
-    id: packaging
-    run: node ./semantic-releasing.js ${{ inputs.package-path }} ${{ inputs.changelog-path }} ${{ inputs.commit-message }}
+  - name: Extract version from package.json
+    if: ${{ steps.packaging.outputs.status == "success" }}
+    uses: amochkin/gha-json-value@v1-rc5
+    id: extract-version
+    with:
+      property: version
+
+  - name: Prepare commit message
+    if: ${{ steps.packaging.outputs.status == "success" }}
+    id: prepare-commit-message
+    run: |
+      str="${{ inputs.commit-template }}";
+      oldstr="_version_";
+      newstr="${{ steps.extract-version.outputs.value }}";
+      result=$(echo $str | sed "s/$oldstr/$newstr/");
+      echo "message=$result" >> $GITHUB_OUTPUT;
     shell: bash
 
   - name: Add and commit changes
-    if: ${{ inputs.enable-commit-and-push == 'true' }}
+    id: commit
+    if: ${{ inputs.enable-commit-and-push == 'true' && steps.packaging.outputs.status == "success" }}
     uses: EndBug/add-and-commit@v9
     with:
-      message: ${{ steps.packaging.outputs.COMMIT_MESSAGE }}
+      message: ${{ steps.prepare-commit-message.outputs.message }}  
+      add: ${{ inputs.staging-path }}
 
   - name: Push changes to protected branch
-    if: ${{ inputs.enable-commit-and-push == 'true' }}
+    if: ${{ inputs.enable-commit-and-push == 'true' && steps.commit.outputs.committed == 'true' && steps.packaging.outputs.status == "success" }}
     uses: CasperWA/push-protected@v2
     with:
       branch: ${{ inputs.branch }}
-      token: ${{ inputs.githubToken }}
-      add: ${{ inputs.staging-path }}
+      token: ${{ inputs.github-token }}
